Ok Fully Finished

--- a/.gitignore
+++ b/.gitignore
@@ -51,5 +51,7 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
-
+JavascriptPart/node_modules
+Basic Console App/bin/Release/
+Basic Console App/obj/
 Basic Console App/.vs
